--- a/dbset.ini
+++ b/dbset.ini
@@ -7,8 +7,11 @@ passwd = chart_demo
 sid = orcl
 [chart]
 chart_title =  chart_demo
-all_in_one_page = 1
-chart_count = 42
+mutli_chart_type = page
+#mutli_chart_type = tab
+all_in_one_page = ON
+draggable = OFF
+chart_count = 47
 #---1--------------------------------- 曲线图
 switch1 = ON
 title1 =  曲线图
@@ -194,7 +197,7 @@ chart_type23 = kline
 x23= SELECT date FROM chart_demo.t_kline  order by id
 y23 = SELECT 0
 data23 = SELECT start_p,end_p,min_p,max_p  from chart_demo.t_kline order by id
-style23 = {}
+style23 = {'color':"#ec0000",'color0':"#00da3c",'border_color':"#8A0000",'border_color0':"#008F28",}
 #---24---------------------------------象形柱状图
 switch24 = ON
 title24 = 象形柱状图
@@ -243,7 +246,7 @@ title29 = 地理坐标系
 chart_type29 = geo
 x29 = SELECT 'china'
 y29 = SELECT 0
-data29 = SELECT province,counts from chart_demo.t_geo where country='china'
+data29 = SELECT province,counts from chart_demo.t_geo where country='china' and year=2015
 style29 = {'is_piecewise':True,'ChartType':"HEATMAP"}
 #ChartType: None ,EFFECT_SCATTER,HEATMAP
 #---30---------------------------------地理坐标系广东
@@ -260,7 +263,7 @@ title31 = 地理坐标系3
 chart_type31 = geo_lines
 x31 = SELECT 'china'
 y31 = SELECT start,end from chart_demo.t_geoline
-data31 = SELECT province,counts from chart_demo.t_geo where country='china'
+data31 = SELECT province,counts from chart_demo.t_geo where country='china' and year=2015
 style31 = {'symbol_size':6,'back_color':"#323c48", 'border_color':"#111", 'dot_color':"red",'line_color':"blue",'curve':0.2}
 #---32---------------------------------地图
 switch32 = ON
@@ -268,7 +271,7 @@ title32 = 地图
 chart_type32 = map
 x32 = SELECT 'china','商家A'
 y32 = SELECT 0
-data32 = SELECT province,counts from chart_demo.t_geo where country='china'
+data32 = SELECT province,counts from chart_demo.t_geo where country='china' and year=2015
 style32 = {'is_show':False,'max_':200,'is_piecewise':True}
 #---33---------------------------------世界地图
 switch33 = ON
@@ -368,3 +371,43 @@ x42_2 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
 y42_2 = SELECT DISTINCT area FROM chart_demo.t_chart1 where date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 data42_2 = SELECT date,area,amount FROM chart_demo.t_chart1
 style42_2 = {'title_pos_left':"5%%",'legend_pos_left':"10%%",'grid_pos_left':"55%%"}
+#---43---------------------------------专业K线图
+switch43 = ON
+title43 = 专业K线图
+chart_type43 = kline_profession
+x43= SELECT date FROM chart_demo.t_kline  order by id
+y43 = SELECT 0
+data43 = SELECT start_p,end_p,min_p,max_p  from chart_demo.t_kline order by id
+style43 = {'color':"#ec0000", 'color0':"#00da3c"}
+#---44---------------------------------表格
+switch44 = ON
+title44 = 表格
+chart_type44 = table
+x44= SELECT  '地区', '日期','总额'
+y44 = SELECT 0
+data44 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+style44 = {}
+#---45---------------------------------时间线轮播柱状图
+switch45 = ON
+title45 = 时间线轮播柱状图
+chart_type45 = timeline_bar
+x45 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+y45 = SELECT DISTINCT DATE_FORMAT(date, '%%Y-%%m-%%d') FROM chart_demo.t_chart1 order by date
+data45 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1
+style45 = {}
+#---46---------------------------------时间线轮播饼图
+switch46 = ON
+title46 = 时间线轮播饼图
+chart_type46 = timeline_pie
+x46 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+y46 = SELECT DISTINCT DATE_FORMAT(date, '%%Y-%%m-%%d') FROM chart_demo.t_chart1 order by date
+data46 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1
+style46 = {}
+#---47---------------------------------时间线轮播地图
+switch47 = ON
+title47 = 时间线轮播地图
+chart_type47 = timeline_map
+x47 = SELECT 'china','商家A'
+y47 = SELECT distinct year from chart_demo.t_geo 
+data47 = SELECT CONCAT(YEAR,''),province,counts FROM chart_demo.t_geo WHERE country='china'
+style47 = {'is_show':False,'max_':300,'is_piecewise':True}
