--- a/dbset.ini
+++ b/dbset.ini
@@ -11,7 +11,7 @@ mutli_chart_type = page
 #mutli_chart_type = tab
 all_in_one_page = ON
 draggable = OFF
-chart_count = 47
+chart_count = 48
 #---1--------------------------------- 曲线图
 switch1 = ON
 title1 =  曲线图
@@ -411,3 +411,11 @@ x47 = SELECT 'china','商家A'
 y47 = SELECT distinct year from chart_demo.t_geo 
 data47 = SELECT CONCAT(YEAR,''),province,counts FROM chart_demo.t_geo WHERE country='china'
 style47 = {'is_show':False,'max_':300,'is_piecewise':True}
+#---48---------------------------------图像
+switch48 = ON
+title48 = 图像
+chart_type48 = image
+x48 = SELECT "https://user-images.githubusercontent.com/19553554/39612358-499eb2ae-4f91-11e8-8f56-179c4f0bf2df.png"
+y48 = SELECT 0
+data48 = SELECT 0
+style48 = {"width": "200px", "height": "200px", "style": "margin-top: 20px"}
