--- a/dbset.ini
+++ b/dbset.ini
@@ -19,7 +19,8 @@ chart_type1 = line
 x1 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
 y1 = SELECT DISTINCT area FROM chart_demo.t_chart1 where date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 data1 = SELECT date,area,amount FROM chart_demo.t_chart1
-style1 = {'type_':"max",'is_smooth':True,'is_show':False,'opacity':0}
+style1 = {'themetype':'WONDERLAND','type_':"max",'is_smooth':True,'is_show':False,'opacity':0}
+#themetype:'WHITE','LIGHT','DARK','CHALK','ESSOS','INFOGRAPHIC','MACARONS','PURPLE_PASSION','ROMA','ROMANTIC','SHINE','VINTAGE','WALDEN','WESTEROS','WONDERLAND'
 #'opacity':0.5 面积图
 #---2---------------------------------饼图
 switch2 = ON
