--- a/dbset.ini
+++ b/dbset.ini
@@ -86,7 +86,7 @@ chart_type9 = graph3
 x9 = SELECT id,name,symbolsize,category,label,value,x,y FROM chart_demo.t_les_miserables_nodes
 y9 = SELECT NAME FROM chart_demo.t_les_miserables_categories
 data9 = SELECT id,source,target FROM chart_demo.t_les_miserables_links
-style9 = {'layout':"circular",'is_rotate_label':True,'color':"source", 'curve':0.3,'position':"right",'orient':"vertical", 'legend_pos_left':"2%%", 'legend_pos_top':"20%%"}
+style9 = {'Initopts_width':"1000px", 'Initopts_height':"600px",'layout':"circular",'is_rotate_label':True,'color':"source", 'curve':0.3,'position':"right",'orient':"vertical", 'legend_pos_left':"2%%", 'legend_pos_top':"20%%"}
 #---10---------------------------------关系图4
 switch10 = ON
 title10 = 关系图4
@@ -94,7 +94,7 @@ chart_type10 = graph4
 x10 = SELECT x,y,id,name,symbolsize,attributes FROM chart_demo.t_npmdepgraph_nodes
 y10 = SELECT 0
 data10 = SELECT source,target FROM chart_demo.t_npmdepgraph_links
-style10 = {'layout':"none",'is_show':False,'width':0.5, 'curve':0.3, 'opacity':0.7}
+style10 = {'Initopts_width':"1000px", 'Initopts_height':"600px",'layout':"none",'is_show':False,'width':0.5, 'curve':0.3, 'opacity':0.7}
 #---11---------------------------------水球图
 switch11 = ON
 title11 = 水球图
@@ -150,7 +150,7 @@ chart_type17 = sunburst
 x17= SELECT 0
 y17 = SELECT 0
 data17 = SELECT tree  from chart_demo.t_sunburst
-style17 = {'highlight_policy':"ancestor",'radius':[0, "95%%"],'sort_':"null",'levels':[{},{"r0": "15%%","r": "35%%","itemStyle": {"borderWidth": 2},"label": {"rotate": "tangential"},},{"r0": "35%%", "r": "70%%", "label": {"align": "right"}},{"r0": "70%%","r": "72%%","label": {"position": "outside", "padding": 3, "silent": False},"itemStyle": {"borderWidth": 3},},],}
+style17 = {'Initopts_width':"1000px", 'Initopts_height':"600px",'highlight_policy':"ancestor",'radius':[0, "95%%"],'sort_':"null",'levels':[{},{"r0": "15%%","r": "35%%","itemStyle": {"borderWidth": 2},"label": {"rotate": "tangential"},},{"r0": "35%%", "r": "70%%", "label": {"align": "right"}},{"r0": "70%%","r": "72%%","label": {"position": "outside", "padding": 3, "silent": False},"itemStyle": {"borderWidth": 3},},],}
 #---18---------------------------------主题河流图
 switch18 = ON
 title18 = 主题河流图
@@ -414,9 +414,9 @@ data47 = SELECT CONCAT(YEAR,''),province,counts FROM chart_demo.t_geo WHERE coun
 style47 = {'is_show':False,'max_':300,'is_piecewise':True}
 #---48---------------------------------图像
 switch48 = ON
-title48 = 图像
+title48 = 看到这里，请打颗星😄
 chart_type48 = image
-x48 = SELECT "https://user-images.githubusercontent.com/19553554/39612358-499eb2ae-4f91-11e8-8f56-179c4f0bf2df.png"
+x48 = SELECT "https://avatars2.githubusercontent.com/u/18002408?s=460&v=4"
 y48 = SELECT 0
 data48 = SELECT 0
-style48 = {"width": "200px", "height": "200px", "style": "margin-top: 20px"}
+style48 = {"width": "300px", "height": "300px", "style": "margin-top: 20px"}
