--- a/dbset.ini
+++ b/dbset.ini
@@ -12,6 +12,9 @@ mutli_chart_type = page
 all_in_one_page = ON
 draggable = OFF
 chart_count = 48
+#图表style的公共属性：
+#'themetype':主题类型，取值范围：'WHITE','LIGHT','DARK','CHALK','ESSOS','INFOGRAPHIC','MACARONS','PURPLE_PASSION','ROMA','ROMANTIC','SHINE','VINTAGE','WALDEN','WESTEROS','WONDERLAND'
+#'toolbox_opts_is_show':是否显示ToolBox，取值范围：True,False
 #---1--------------------------------- 曲线图
 switch1 = ON
 title1 =  曲线图
@@ -20,7 +23,6 @@ x1 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
 y1 = SELECT DISTINCT area FROM chart_demo.t_chart1 where date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 data1 = SELECT date,area,amount FROM chart_demo.t_chart1
 style1 = {'themetype':'WONDERLAND','type_':"max",'is_smooth':True,'is_show':False,'opacity':0}
-#themetype:'WHITE','LIGHT','DARK','CHALK','ESSOS','INFOGRAPHIC','MACARONS','PURPLE_PASSION','ROMA','ROMANTIC','SHINE','VINTAGE','WALDEN','WESTEROS','WONDERLAND'
 #'opacity':0.5 面积图
 #---2---------------------------------饼图
 switch2 = ON
@@ -414,9 +416,10 @@ data47 = SELECT CONCAT(YEAR,''),province,counts FROM chart_demo.t_geo WHERE coun
 style47 = {'is_show':False,'max_':300,'is_piecewise':True}
 #---48---------------------------------图像
 switch48 = ON
-title48 = 看到这里，请打颗星😄
+title48 = 看到这里，请打颗 星
 chart_type48 = image
 x48 = SELECT "https://avatars2.githubusercontent.com/u/18002408?s=460&v=4"
 y48 = SELECT 0
 data48 = SELECT 0
 style48 = {"width": "300px", "height": "300px", "style": "margin-top: 20px"}
+
