--- a/dbset.ini
+++ b/dbset.ini
@@ -11,10 +11,13 @@ mutli_chart_type = page
 #mutli_chart_type = tab
 all_in_one_page = ON
 draggable = OFF
-chart_count = 48
+chart_count = 50
 #图表style的公共属性：
-#'themetype':主题类型，取值范围：'WHITE','LIGHT','DARK','CHALK','ESSOS','INFOGRAPHIC','MACARONS','PURPLE_PASSION','ROMA','ROMANTIC','SHINE','VINTAGE','WALDEN','WESTEROS','WONDERLAND'
-#'toolbox_opts_is_show':是否显示ToolBox，取值范围：True,False
+#'themetype':主题类型,取值范围:'WHITE','LIGHT','DARK','CHALK','ESSOS','INFOGRAPHIC','MACARONS','PURPLE_PASSION','ROMA','ROMANTIC','SHINE','VINTAGE','WALDEN','WESTEROS','WONDERLAND'
+#'toolbox_opts_is_show':是否显示ToolBox,取值范围:True,False
+#'xaxis_opts_formatter','yaxis_opts_formatter' :X,Y轴显示格式化，取值范例:"{value}(公斤)"
+#'xaxis_opts_rotate':旋转X轴标签,解决标签名字过长的问题,取值范例:0,-15,-30
+#'datazoom_opts':滚动条,取值范围: 'horizontal','vertical','inside'
 #---1--------------------------------- 曲线图
 switch1 = ON
 title1 =  曲线图
@@ -32,6 +35,7 @@ x2 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('20
 y2 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
 data2 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 style2 = {}
+#style2 = {'rosetype':"radius",'radius':["30%%", "55%%"]}
 #---3---------------------------------柱状图
 switch3 = ON
 title3 = 柱状图
@@ -55,8 +59,8 @@ chart_type5 = funnel
 x5 = SELECT 0
 y5 = SELECT 0
 data5 = SELECT area,amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
-style5 = {'sort_':"descending ",'position':"inside"}
-#style5 = {'sort_':"ascending"} or  {'sort_':"descending "}
+style5 = {'sort_':"descending",'position':"inside"}
+#'sort_':漏斗方向,取值范围:"ascending","descending"
 #---6---------------------------------仪表盘
 switch6 = ON
 title6 = 仪表盘
@@ -120,7 +124,8 @@ chart_type13 = polar
 x13= SELECT 0
 y13 = SELECT 0
 data13 = SELECT id,count  from chart_demo.t_polar
-style13 = {'type_':"scatter",'is_show':False}
+style13 = {'type_':"effectScatter",'is_show':False}
+#type_':"Scatter","effectScatter" :"effectScatter"时，可以设置: 'effect_opts_scale':10, 'effect_opts_period':5)
 #---14---------------------------------雷达图
 switch14 = ON
 title14 = 雷达图
@@ -168,7 +173,7 @@ chart_type19 = wordcloud
 x19= SELECT 0
 y19 = SELECT 0
 data19 = SELECT name,count  from chart_demo.t_wordcloud
-style19 = {'word_size_range':[20, 100]}
+style19 = {'word_size_range':[20, 100],'SymbolType_DIAMOND':True}
 #---20---------------------------------箱形图
 switch20 = ON
 title20 = 箱形图
@@ -233,8 +238,8 @@ x27= SELECT 0
 y27 = SELECT 0
 data27 = SELECT tree from chart_demo.t_tree
 style27 = {'orient':"LR"}
-#orient: LR左右,RL右左,TB上下,BT下上
-#orient: TB上下,BT下上  时需要配置: 'position':"top",'horizontal_align':"right",'vertical_align':"middle",'rotate':-90
+#orient: LR:左右,RL:右左,TB:上下,BT:下上
+#orient: TB:上下,BT:下上  时需要配置: 'position':"top",'horizontal_align':"right",'vertical_align':"middle",'rotate':-90
 #---28---------------------------------矩形树图
 switch28 = ON
 title28 = 矩形树图
@@ -414,12 +419,28 @@ x47 = SELECT 'china','商家A'
 y47 = SELECT distinct year from chart_demo.t_geo 
 data47 = SELECT CONCAT(YEAR,''),province,counts FROM chart_demo.t_geo WHERE country='china'
 style47 = {'is_show':False,'max_':300,'is_piecewise':True}
-#---48---------------------------------图像
+#---48---------------------------------极坐标系2
 switch48 = ON
-title48 = 看到这里，请打颗 星
-chart_type48 = image
-x48 = SELECT "https://avatars2.githubusercontent.com/u/18002408?s=460&v=4"
-y48 = SELECT 0
-data48 = SELECT 0
-style48 = {"width": "300px", "height": "300px", "style": "margin-top: 20px"}
-
+title48 = 极坐标系2
+chart_type48 = polar
+x48 = SELECT DISTINCT WEEK FROM chart_demo.t_heatmap WHERE TIME<3
+y48 = SELECT DISTINCT TIME FROM chart_demo.t_heatmap WHERE TIME<3
+data48 = SELECT WEEK,TIME,temperature FROM chart_demo.t_heatmap WHERE TIME<3
+style48 = {'type_':"bar",'muti_bar':True,'is_show':False}
+#---49---------------------------------极坐标系3
+switch49 = ON
+title49 = 极坐标系3
+chart_type49 = polar
+x49 = SELECT DISTINCT WEEK FROM chart_demo.t_heatmap WHERE TIME=3
+y49 = SELECT DISTINCT TIME FROM chart_demo.t_heatmap WHERE TIME=3
+data49 = SELECT WEEK,TIME,temperature FROM chart_demo.t_heatmap WHERE TIME=3
+style49 = {'type_':"bar",'muti_bar':False,'is_clockwise':True, 'max_':60}
+#'muti_bar':False时需要设置 'max_':大于最大的数值。
+#---50---------------------------------图像
+switch50 = ON
+title50 = 看到这里，请打颗 星
+chart_type50 = image
+x50 = SELECT "https://avatars2.githubusercontent.com/u/18002408?s=460&v=4"
+y50 = SELECT 0
+data50 = SELECT 0
+style50 = {"width": "300px", "height": "300px", "style": "margin-top: 20px"}
