--- a/dbset.ini
+++ b/dbset.ini
@@ -205,7 +205,7 @@ chart_type23 = kline
 x23= SELECT date FROM chart_demo.t_kline  order by id
 y23 = SELECT 0
 data23 = SELECT start_p,end_p,min_p,max_p  from chart_demo.t_kline order by id
-style23 = {'color':"#ec0000",'color0':"#00da3c",'border_color':"#8A0000",'border_color0':"#008F28",}
+style23 = {'color':"#ec0000",'color0':"#00da3c",'border_color':"#8A0000",'border_color0':"#008F28",'datazoom_opts':'inside'}
 #---24---------------------------------象形柱状图
 switch24 = ON
 title24 = 象形柱状图
@@ -229,7 +229,7 @@ chart_type26 = overlap
 x26= SELECT distinct month  from chart_demo.t_overlap order by id
 y26 = SELECT 0
 data26 = SELECT evaporation,rainfall,temperature from chart_demo.t_overlap order by id
-style26 = {}
+style26 = {'yaxis_opts_formatter':"{value} ml"}
 #---27---------------------------------树图
 switch27 = ON
 title27 = 树图
