--- a/dbset.ini
+++ b/dbset.ini
@@ -438,7 +438,7 @@ style49 = {'type_':"bar",'muti_bar':False,'is_clockwise':True, 'max_':60}
 #'muti_bar':False时需要设置 'max_':大于最大的数值。
 #---50---------------------------------图像
 switch50 = ON
-title50 = 看到这里，请打颗 星
+title50 = 请帮忙在github打颗星！
 chart_type50 = image
 x50 = SELECT "https://avatars2.githubusercontent.com/u/18002408?s=460&v=4"
 y50 = SELECT 0
