--- a/dbset.ini
+++ b/dbset.ini
@@ -35,7 +35,7 @@ x2 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('20
 y2 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
 data2 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 style2 = {}
-#style2 = {'rosetype':"radius",'radius':["30%%", "55%%"]}
+#style2 = {'rosetype':"radius",'radius':["30%%", "55%%"],'center':["75%%", "50%%"]}
 #---3---------------------------------柱状图
 switch3 = ON
 title3 = 柱状图
